Modified to fix membership cap count and provider drop list to be visible irrespective of table size

--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -205,3 +205,5 @@ table#cptListTable, table#icdListTable {
 
 .ui-widget-header{ background-color : #dff0d8 !important; background-image:none !important;}
 
+ul.multiselect-container.dropdown-menu a {background-color:#FFFFFF;}
+
